fix: Add util method toNames (#428)