@@ -32,7 +32,6 @@ import static java.lang.String.format;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import org.hisp.dhis.model.IdentifiableObject;
@@ -48,10 +47,7 @@ public class IdentifiableObjectUtils {
    * @return a list of object identifiers.
    */
   public static <T extends IdentifiableObject> List<String> toIdentifiers(Collection<T> objects) {
-    return objects.stream()
-        .filter(Objects::nonNull)
-        .map(IdentifiableObject::getId)
-        .collect(Collectors.toList());
+    return objects.stream().filter(Objects::nonNull).map(IdentifiableObject::getId).toList();
   }
 
   /**
@@ -62,10 +58,18 @@ public class IdentifiableObjectUtils {
    * @return a list of object codes.
    */
   public static <T extends IdentifiableObject> List<String> toCodes(Collection<T> objects) {
-    return objects.stream()
-        .filter(Objects::nonNull)
-        .map(IdentifiableObject::getCode)
-        .collect(Collectors.toList());
+    return objects.stream().filter(Objects::nonNull).map(IdentifiableObject::getCode).toList();
+  }
+
+  /**
+   * Converts the given collection of identifiable objects to a new list of object codes.
+   *
+   * @param <T> the type.
+   * @param objects the collection of {@link IdentifiableObject}.
+   * @return a list of object codes.
+   */
+  public static <T extends IdentifiableObject> List<String> toNames(Collection<T> objects) {
+    return objects.stream().filter(Objects::nonNull).map(IdentifiableObject::getName).toList();
   }
 
   /**
